tests/invalid_semantic/underscore_var.f
PROGRAM BADUNDERSCORE
INTEGER MY_VAR
MY_VAR = 10
END
